--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -22,9 +22,9 @@ jobs:
           ref: ${{ github.ref_name || '' }}
 
       - name: Install node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: latest
           cache: 'npm'
           cache-dependency-path: package-lock.json
 
@@ -58,14 +58,14 @@ jobs:
           ref: ${{ github.ref_name || '' }}
 
       - name: Install node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: latest
           cache: 'npm'
           cache-dependency-path: package-lock.json
 
       - name: Download docgen artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: docgen
           path: docs
