--- a/packages/create-reciple/package.json
+++ b/packages/create-reciple/package.json
@@ -35,16 +35,19 @@
   ],
   "dependencies": {
     "@clack/prompts": "^0.7.0",
+    "@reciple/core": "^9.0.2",
     "@reciple/utils": "^9.0.1",
     "commander": "^12.1.0",
-    "fallout-utility": "^2.9.1"
+    "compressing": "^1.10.1",
+    "detect-indent": "^7.0.1",
+    "discord.js": "^14.15.2",
+    "fallout-utility": "^2.9.1",
+    "package-json": "^10.0.0",
+    "reciple": "^9.0.2"
   },
   "devDependencies": {
-    "@reciple/core": "^9.0.2",
     "@types/node": "^20.12.12",
-    "discord.js": "^14.15.2",
     "nodemon": "^3.1.2",
-    "reciple": "^9.0.2",
     "rimraf": "^5.0.7",
     "typescript": "^5.4.5"
   }
