--- a/packages/message-command-utils/package.json
+++ b/packages/message-command-utils/package.json
@@ -34,7 +34,10 @@
     "README.md"
   ],
   "dependencies": {
-    "@sapphire/shapeshift": "^4.0.0"
+    "@reciple/utils": "^9.0.3",
+    "@sapphire/shapeshift": "^4.0.0",
+    "boolean": "^3.2.0",
+    "fallout-utility": "^2.9.1"
   },
   "devDependencies": {
     "discord.js": "^14.5.3"
