--- a/packages/create-reciple/package.json
+++ b/packages/create-reciple/package.json
@@ -51,5 +51,6 @@
     "nodemon": "^3.1.3",
     "rimraf": "^5.0.7",
     "typescript": "^5.4.5"
-  }
+  },
+  "gitHead": "88c2b7a5d61ca5707db84435871c11d50259d056"
 }
