--- a/packages/docgen/package.json
+++ b/packages/docgen/package.json
@@ -44,5 +44,6 @@
     "commander": "^12.1.0",
     "typedoc": "^0.25.13",
     "typedoc-json-parser": "^10.0.0"
-  }
+  },
+  "gitHead": "88c2b7a5d61ca5707db84435871c11d50259d056"
 }
