--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
   - name: The North Solution
-    url: https://discord.gg/thenorthsolution
+    url: https://discord.gg/2gyckrwK7b
     about: Please visit our Discord server for questions and support requests.
