--- a/packages/create-reciple/templates/typescript/tsconfig.json
+++ b/packages/create-reciple/templates/typescript/tsconfig.json
@@ -9,6 +9,9 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "sourceMap": true,
-    "strict": true
+    "strict": true,
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
