--- a/packages/create-reciple/package.json
+++ b/packages/create-reciple/package.json
@@ -25,6 +25,7 @@
   "scripts": {
     "clean": "rimraf ./dist",
     "build": "npm run clean && tsc",
+    "check": "tsc --noEmit",
     "docs": "node ../docgen/dist/bin.js -i ./src/index.ts -o ./docs/docs.json"
   },
   "files": [
