--- a/packages/docgen/package.json
+++ b/packages/docgen/package.json
@@ -29,6 +29,7 @@
   "scripts": {
     "clean": "rimraf ./dist",
     "build": "npm run clean && tsc",
+    "check": "tsc --noEmit",
     "docs": "node ./dist/bin.js -i ./src/index.ts -o ./docs/docs.json"
   },
   "files": [
