--- a/packages/reciple/package.json
+++ b/packages/reciple/package.json
@@ -32,6 +32,7 @@
   "scripts": {
     "clean": "rimraf ./dist",
     "build": "npm run clean && tsc",
+    "check": "tsc --noEmit",
     "docs": "node ../docgen/dist/bin.js -i ./src/exports.ts -o ./docs/docs.json"
   },
   "files": [
