--- a/packages/utils/assets/tsconfig.json
+++ b/packages/utils/assets/tsconfig.json
@@ -9,6 +9,7 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "newLine": "lf"
+    "newLine": "lf",
+    "verbatimModuleSyntax": true
   }
 }
