--- a/packages/create-reciple/package.json
+++ b/packages/create-reciple/package.json
@@ -26,7 +26,8 @@
     "clean": "rimraf ./dist",
     "build": "npm run clean && tsc",
     "check": "tsc --noEmit",
-    "docs": "node ../docgen/dist/bin.js -i ./src/index.ts -o ./docs/docs.json"
+    "docs": "node ../docgen/dist/bin.js -i ./src/index.ts -o ./docs/docs.json",
+    "prepack": "npm run build"
   },
   "files": [
     "dist",
