--- a/packages/create-reciple/templates/typescript/tsconfig.json
+++ b/packages/create-reciple/templates/typescript/tsconfig.json
@@ -10,6 +10,7 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
+    "experimentalDecorators": true,
     "paths": {
       "@/*": ["./src/*"]
     }
