--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -4,7 +4,8 @@
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
-    "emitDecoratorMetadata": true,
-    "declaration": true
+    "declaration": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   }
 }
