--- a/packages/create-reciple/templates/typescript/tsconfig.json
+++ b/packages/create-reciple/templates/typescript/tsconfig.json
@@ -11,6 +11,7 @@
     "sourceMap": true,
     "strict": true,
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "paths": {
       "@/*": ["./src/*"]
     }
