move decorators to a separate package

--- a/packages/decorators/tsconfig.json
+++ b/packages/decorators/tsconfig.json
@@ -4,6 +4,8 @@
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
-    "declaration": true
+    "declaration": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   }
 }
