--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -40,6 +40,7 @@
     "@sapphire/shapeshift": "^4.0.0",
     "fallout-utility": "^2.9.1",
     "lodash.defaultsdeep": "^4.6.1",
+    "prtyprnt": "^1.0.0",
     "semver": "^7.6.2",
     "ts-mixer": "^6.0.4"
   },
