--- a/packages/create-reciple/templates/javascript/package.json
+++ b/packages/create-reciple/templates/javascript/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "reciple -c reciple.mjs",
+    "start:shard": "reciple shard -c reciple.mjs",
     "dev": "nodemon --ext js,mjs,json --exec \"reciple -c reciple.mjs\" --signal SIGHUP"
   },
   "dependencies": {
