--- a/packages/create-reciple/templates/typescript/package.json
+++ b/packages/create-reciple/templates/typescript/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "build": "rimraf ./modules && tsc",
     "start": "reciple -c reciple.mjs",
+    "start:shard": "reciple shard -c reciple.mjs",
     "build:start": "SCRIPT_RUN build && reciple -c reciple.mjs",
+    "build:start:shard": "SCRIPT_RUN build && reciple shard -c reciple.mjs",
     "dev": "nodemon --ext ts,mts,json --ignore ./modules --exec \"SCRIPT_RUN build && reciple -c reciple.mjs\" --signal SIGHUP"
   },
   "dependencies": {
