--- a/example/package.json
+++ b/example/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ../packages/reciple/dist/bin.js -c ./reciple.mjs",
-    "shard": "node  ../packages/reciple/dist/bin.js --debug shard -c reciple.mjs",
-    "dev": "nodemon --ext js,mjs,cjs,json --exec \"node ../packages/reciple/dist/bin.js -c reciple.mjs\" --signal SIGHUP"
+    "shard": "node ../packages/reciple/dist/bin.js --debug shard -c reciple.mjs",
+    "dev": "node ../packages/reciple/dist/bin.js --debug dev -c reciple.mjs"
   },
   "dependencies": {
     "@reciple/core": "file:../packages/core",
