--- a/packages/create-reciple/package.json
+++ b/packages/create-reciple/package.json
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.0.3",
+    "nodemon": "^3.1.4",
     "rimraf": "^6.0.1",
     "typescript": "^5.5.4"
   },
