--- a/packages/create-reciple/templates/typescript-decorators/package.json
+++ b/packages/create-reciple/templates/typescript-decorators/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reciple/core": "RECIPLE_CORE",
+    "@reciple/decorators": "RECIPLE_DECORATORS",
     "discord.js": "DISCORDJS",
     "reciple": "RECIPLE"
   },
