--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "postinstall": "patch-package"
   },
   "devDependencies": {
-    "@swc/core": "^1.7.26",
-    "@types/node": "^22.5.4",
+    "@swc/core": "^1.7.36",
+    "@types/node": "^22.7.7",
     "esbuild-plugin-version-injector": "^1.2.1",
     "lerna": "^8.1.8",
     "patch-package": "^8.0.0",
     "rimraf": "^6.0.1",
-    "tsup": "^8.2.4",
-    "typescript": "^5.6.2"
+    "tsup": "^8.3.0",
+    "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "@actions/core": "^1.11.1"
   }
 }
