--- a/package.json
+++ b/package.json
@@ -19,16 +19,18 @@
     "postinstall": "patch-package"
   },
   "devDependencies": {
-    "@swc/core": "^1.7.36",
-    "@types/node": "^22.7.7",
+    "@swc/core": "^1.10.4",
+    "@types/node": "^22.10.3",
     "esbuild-plugin-version-injector": "^1.2.1",
-    "lerna": "^8.1.8",
+    "lerna": "^8.1.9",
     "patch-package": "^8.0.0",
     "rimraf": "^6.0.1",
-    "tsup": "^8.3.0",
-    "typescript": "^5.6.3"
+    "tsup": "^8.3.5",
+    "typescript": "^5.7.2"
   },
   "dependencies": {
-    "@actions/core": "^1.11.1"
+    "@actions/core": "^1.11.1",
+    "@reciple/utils": "^9.6.0",
+    "discord-api-types": "^0.37.115"
   }
 }
